--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,12 @@
     "@types/date-fns": "^2.6.0",
     "axios": "^0.19.2",
     "date-fns": "^2.12.0",
+    "query-string": "^6.12.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.1",
+    "react-swipeable-views": "^0.13.9"
   },
   "scripts": {
     "start": "react-scripts start",
